ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================
******************************************
CHANGELOG: 01-12-2011 RFT
Cleaned up menus.cpp in relation to frsky yel/org/red option displays.

******************************************
CHANGELOG: 21-11-2011 MPB
Fix WsHowHi metric/imperial bug

******************************************
CHANGELOG: 22-11-2011 RFT
Audio option to enable 'just haptic' alerts to work
Added haptic to frsky alerts menu

******************************************
CHANGELOG: 21-11-2011 MPB
Re-arrange FrSky telemetry structures
Add FrSky battery capacity used function
Fix DSM2 problems, improve pulse generation interrupt latency

******************************************
CHANGELOG: 21-11-2011 RFT
Updated audio.cpp & audio.h to include the fancy frsky alert souunds
Updated menu.cpp to show menu for fancy sounds
Updated audio.cpp to fix an issue with sound playback when running the sound interupt function

******************************************


******************************************
CHANGELOG: 19-11-2011 MPB
Move Frsky 10 mS code into frsky.cpp (from drivers.cpp) 
Add audioQueue::frskyevent() in audio.cpp
Make double size decimal point take less space + flash saving
Add frsky alarm options in system menu, these don't change anything yet
Add frsky alarm setting to myeeprom.h
Fix dsm2 reboot problem?
Initialise bandgap and battery values - faster settling of display voltage

******************************************
CHANGELOG: 14-11-2011 RFT
Audio array loop change to save cpu cycle

******************************************
CHANGELOG: 13-11-2011 MPB
Audio array loop fix

******************************************
CHANGELOG: 13-11-2011 MPB